# revive-ai

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
assets/samples/: generate_samples.py
backend/: __init__.py  image_processor.py  nemotron_client.py  qwen_client.py
config/: __init__.py  settings.py
crew/: __init__.py  agents.py  pipeline.py  tasks.py  tools.py
database/: __init__.py  db.py
frontend/: __init__.py  components.py  styles.py
